2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (grub_nilfs2_palloc_entry_offset_log):
	Fix argument to grub_nilfs2_palloc_bitmap_block_offset.

2012-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/squash4.c (lzo_decompress): Set grub_errno on error.
	Allocate at lest 8192 for temporary buffer as required for lzo.

2012-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_mount): Don't add logical_sector_bits
	to cluster_bits, since it's already added in.
	(grub_fat_read_data): Likewise.

2012-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (grub_ntfs_mount): Support 256-byte sectors,
	as long as cluster size is multiple of 512 bytes.

2012-04-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Fix locale directory.

2012-04-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (map): Make static.

2012-04-23  Bean  <bean123ch@gmail.com>

	* util/grub-fstest.c (fstest): Add missing break.

2012-04-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Fix hurd build.

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_size) [__GNU__]: Do
	not define nr variable.
	* util/getroot.c [__GNU__] (strip_extra_slashes, xgetcwd, exec_pipe,
	find_root_devices_from_poolname, find_root_devices_from_libzfs,
	grub_find_device): Do not define.

2012-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix kfreebsd compile and behaviour.

	* grub-core/kern/emu/hostdisk.c (grub_util_follow_gpart_up): Fix
	format-security.
	* util/getroot.c: Fix wait.h include.
	(grub_guess_root_devices): Error if grub_find_device fails.
	(grub_util_get_geom_abstraction): Fix shadowing and format-security.
	(grub_util_get_dev_abstraction): Likewise.
	(grub_util_pull_device): Likewise.
	(grub_util_get_grub_dev): Likewise.
	* util/lvm.c (grub_util_lvm_isvolume): Likewise.

2012-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix and unify wholedisk detection.
